--- a/e2e/Gemfile
+++ b/e2e/Gemfile
@@ -8,4 +8,4 @@ gem 'cucumber'
 gem 'rspec-rails'
 gem 'rspec'
 gem 'selenium-webdriver', '= 3.14.0'
-gem 'chromedriver2-helper'
+gem 'chromedriver-helper'
