--- a/e2e/Gemfile
+++ b/e2e/Gemfile
@@ -3,9 +3,11 @@ source 'https://rubygems.org'
 gem 'byebug'
 gem 'capybara-screenshot'
 gem 'capybara'
+gem 'capybara'
 gem 'cucumber-rails'
 gem 'cucumber'
 gem 'rspec-rails'
 gem 'rspec'
 gem 'selenium-webdriver', '= 3.14.0'
 gem 'chromedriver-helper'
+gem 'faker'
